Java 21 and dependency updates